projects/rylogic/Rylogic.Gfx/src/Gfx/View3d.cs


		// Add/Remove objects by context id. This function can be used to add all objects either in, or not in 'context_ids'
		[DllImport(Dll)] private static extern void View3D_WindowAddObjectsById(HWindow window, IntPtr context_ids, int include_count, int exclude_count);
		[DllImport(Dll)] private static extern void View3D_WindowRemoveObjectsById(HWindow window, IntPtr context_ids, int include_count, int exclude_count);

		// Remove all objects 'window'
		[DllImport(Dll)] private static extern void View3D_WindowRemoveAllObjects(HWindow window);

		// Enumerate the object collection GUIDs associated with 'window'
		[DllImport(Dll)] private static extern void View3D_WindowEnumGuids(HWindow window, EnumGuidsCB enum_guids_cb, IntPtr ctx);

		// Enumerate the objects associated with 'window'
		[DllImport(Dll)] private static extern void View3D_WindowEnumObjects(HWindow window, EnumObjectsCB enum_objects_cb, IntPtr ctx);
		[DllImport(Dll)] private static extern void View3D_WindowEnumObjectsById(HWindow window, EnumObjectsCB enum_objects_cb, IntPtr ctx, IntPtr context_ids, int include_count, int exclude_count);

		// Return true if 'object' is among 'window's objects
		[DllImport(Dll)] private static extern bool View3D_WindowHasObject(HWindow window, HObject obj, bool search_children);

		// Return the number of objects assigned to 'window'
		[DllImport(Dll)] private static extern int View3D_WindowObjectCount(HWindow window);

		// Return the bounds of a scene
		[DllImport(Dll)] private static extern BBox View3D_WindowSceneBounds(HWindow window, ESceneBounds bounds, int except_count, [MarshalAs(UnmanagedType.LPArray)] Guid[]? except);

		// Render the window
		[DllImport(Dll)] private static extern void View3D_WindowRender(HWindow window);

		// Wait for any previous frames to complete rendering within the GPU
		[DllImport(Dll)] private static extern void View3D_WindowGSyncWait(HWindow window);

		// Replace the swap chain buffers with 'targets'
		[DllImport(Dll)] private static extern void View3D_WindowCustomSwapChain(HWindow window, int count, [MarshalAs(UnmanagedType.LPArray)] HTexture[] targets);

		// Get the MSAA back buffer (render target + depth stencil)
		[DllImport(Dll)] private static extern BackBuffer View3D_WindowRenderTargetGet(HWindow window);

		// Signal the window is invalidated. This does not automatically trigger rendering. Use InvalidatedCB.
		[DllImport(Dll)] private static extern void View3D_WindowInvalidate(HWindow window, bool erase);
		[DllImport(Dll)] private static extern void View3D_WindowInvalidateRect(HWindow window, ref Win32.RECT rect, bool erase);

		// Register a callback for when the window is invalidated. This can be used to render in response to invalidation, rather than rendering on a polling cycle.
		[DllImport(Dll)] private static extern void View3D_WindowInvalidatedCB(HWindow window, InvalidatedCB invalidated_cb, IntPtr ctx, bool add);

		// Clear the 'invalidated' state of the window.
		[DllImport(Dll)] private static extern void View3D_WindowValidate(HWindow window);

		// Get/Set the window background colour
		[DllImport(Dll)] private static extern uint View3D_WindowBackgroundColourGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowBackgroundColourSet(HWindow window, uint argb);

		// Get/Set the fill mode for the window
		[DllImport(Dll)] private static extern EFillMode View3D_WindowFillModeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowFillModeSet(HWindow window, EFillMode mode);

		// Get/Set the cull mode for a faces in window
		[DllImport(Dll)] private static extern ECullMode View3D_WindowCullModeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowCullModeSet(HWindow window, ECullMode mode);

		// Get/Set the multi-sampling mode for a window
		[DllImport(Dll)] private static extern int View3D_MultiSamplingGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_MultiSamplingSet(HWindow window, int multisampling);

		// Control animation
		[DllImport(Dll)] private static extern void View3D_WindowAnimControl(HWindow window, EAnimCommand command, double time_s);

		// Get/Set the animation time
		[DllImport(Dll)] private static extern bool View3D_WindowAnimating(HWindow window);
		[DllImport(Dll)] private static extern double View3D_WindowAnimTimeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowAnimTimeSet(HWindow window, double time_s);

		// Set the callback for animation events
		[DllImport(Dll)] private static extern void View3D_WindowAnimEventCBSet(HWindow window, AnimationCB anim_cb, IntPtr ctx, bool add);

		// Return the DPI of the monitor that 'window' is displayed on
		[DllImport(Dll)] private static extern v2 View3D_WindowDpiScale(HWindow window);

		// Set the global environment map for the window
		[DllImport(Dll)] private static extern void View3D_WindowEnvMapSet(HWindow window, CubeMap env_map);

		// Enable/Disable the depth buffer
		[DllImport(Dll)] private static extern bool View3D_DepthBufferEnabledGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DepthBufferEnabledSet(HWindow window, bool enabled);

		// Cast a ray into the scene, returning information about what it hit.
		[DllImport(Dll)] private static extern void View3D_WindowHitTestObjects(HWindow window, IntPtr rays, IntPtr hits, int ray_count, float snap_distance, EHitTestFlags flags, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 7)] HObject[] objects, int object_count);
		[DllImport(Dll)] private static extern void View3D_WindowHitTestByCtx(HWindow window, IntPtr rays, IntPtr hits, int ray_count, float snap_distance, EHitTestFlags flags, IntPtr context_ids, int include_count, int exclude_count);

		// Camera *********************************

		// Position the camera and focus distance
		[DllImport(Dll)] private static extern void View3D_CameraPositionSet(HWindow window, v4 position, v4 lookat, v4 up);

		// Get/Set the current camera to world transform
		[DllImport(Dll)] private static extern m4x4 View3D_CameraToWorldGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraToWorldSet(HWindow window, ref m4x4 c2w);

		// Move the camera to a position that can see the whole scene. Set 'dist' to 0 to preserve the FoV, or a distance to set the FoV
		[DllImport(Dll)] private static extern void View3D_ResetView(HWindow window, v4 forward, v4 up, float dist, bool preserve_aspect, bool commit);

		// Reset the camera to view a bbox. Set 'dist' to 0 to preserve the FoV, or a distance to set the FoV
		[DllImport(Dll)] private static extern void View3D_ResetViewBBox(HWindow window, BBox bbox, v4 forward, v4 up, float dist, bool preserve_aspect, bool commit);

		// Enable/Disable orthographic projection
		[DllImport(Dll)] private static extern bool View3D_CameraOrthographicGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraOrthographicSet(HWindow window, bool on);

		// Get/Set the distance to the camera focus point
		[DllImport(Dll)] private static extern float View3D_CameraFocusDistanceGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraFocusDistanceSet(HWindow window, float dist);

		// Get/Set the camera focus point position
		[DllImport(Dll)] private static extern v4 View3D_CameraFocusPointGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraFocusPointSet(HWindow window, v4 position);

		// Get/Set the aspect ratio for the camera field of view
		[DllImport(Dll)] private static extern float View3D_CameraAspectGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraAspectSet(HWindow window, float aspect);

		// Get/Set both the X and Y fields of view (i.e. set the aspect ratio). Null fov means don't change the current value.
		[DllImport(Dll)] private static extern v2 View3D_CameraFovGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraFovSet(HWindow window, v2 fov);

		// Adjust the FocusDist, FovX, and FovY so that the average FOV equals 'fov'
		[DllImport(Dll)] private static extern void View3D_CameraBalanceFov(HWindow window, float fov);

		// Get/Set (using fov and focus distance) the size of the perpendicular area visible to the camera at 'dist' (in world space). Use 'focus_dist != 0' to set a specific focus distance
		[DllImport(Dll)] private static extern v2 View3D_CameraViewRectAtDistanceGet(HWindow window, float dist);
		[DllImport(Dll)] private static extern void View3D_CameraViewRectAtDistanceSet(HWindow window, v2 rect, float focus_dist);

		// Get/Set the near and far clip planes for the camera
		[DllImport(Dll)] private static extern v2 View3D_CameraClipPlanesGet(HWindow window, EClipPlanes flags);
		[DllImport(Dll)] private static extern void View3D_CameraClipPlanesSet(HWindow window, float near, float far, EClipPlanes flags);

		// Get/Set the scene camera lock mask
		[DllImport(Dll)] private static extern ECameraLockMask View3D_CameraLockMaskGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraLockMaskSet(HWindow window, ECameraLockMask mask);
	
		// Get/Set the camera align axis
		[DllImport(Dll)] private static extern v4 View3D_CameraAlignAxisGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraAlignAxisSet(HWindow window, v4 axis);
	
		// Reset to the default zoom
		[DllImport(Dll)] private static extern void View3D_CameraResetZoom(HWindow window);

		// Get/Set the FOV zoom
		[DllImport(Dll)] private static extern float View3D_CameraZoomGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraZoomSet(HWindow window, float zoom);

		// Commit the current O2W position as the reference position
		[DllImport(Dll)] private static extern void View3D_CameraCommit(HWindow window);

		// Navigation *****************************

		// Direct movement of the camera
		[DllImport(Dll)] private static extern bool View3D_Navigate(HWindow window, float dx, float dy, float dz);

		// Move the scene camera using the mouse
		[DllImport(Dll)] private static extern bool View3D_MouseNavigate(HWindow window, v2 ss_point, ENavOp nav_op, bool nav_start_or_end);
		[DllImport(Dll)] private static extern bool View3D_MouseNavigateZ(HWindow window, v2 ss_point, float delta, bool along_ray);

		// Convert an MK_ macro to a default navigation operation
		[DllImport(Dll)] private static extern ENavOp View3D_MouseBtnToNavOp(EMouseBtns mk);

		// Convert a point between 'window' screen space and normalised screen space
		[DllImport(Dll)] private static extern v2 View3D_SSPointToNSSPoint(HWindow window, v2 screen);
		[DllImport(Dll)] private static extern v2 View3D_NSSPointToSSPoint(HWindow window, v2 nss_point);

		// Convert a point between world space and normalised screen space.
		// The x,y components of 'screen' should be in normalised screen space, i.e. (-1,-1)->(1,1)
		// The z component should be the world space distance from the camera
		[DllImport(Dll)] private static extern v4 View3D_NSSPointToWSPoint(HWindow window, v4 screen);
		[DllImport(Dll)] private static extern v4 View3D_WSPointToNSSPoint(HWindow window, v4 world);

		// Return a point and direction in world space corresponding to a normalised screen space point.
		// The x,y components of 'screen' should be in normalised screen space, i.e. (-1,-1)->(1,1)
		// The z component should be the world space distance from the camera
		[DllImport(Dll)] private static extern void View3D_NSSPointToWSRay(HWindow window, v4 screen, out v4 ws_point, out v4 ws_direction);

		// Lights *********************************

		// Get/Set the properties of the global light
		[DllImport(Dll)] private static extern LightInfo View3D_LightPropertiesGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_LightPropertiesSet(HWindow window, ref LightInfo light);
